--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: '3'
 
+
 services:
 
   postgres:
@@ -14,17 +15,22 @@ services:
       POSTGRES_DB: microservicedb
 
   kafka:
-    image: bitnami/kafka:latest
+    image: bitnami/kafka:4.0.0
     ports:
       - "9092:9092"
     environment:
-      KAFKA_CFG_NODE_ID: 0
+      KAFKA_CFG_NODE_ID: 1
       KAFKA_CFG_PROCESS_ROLES: controller,broker
       KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092, CONTROLLER://localhost:9093
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092, CONTROLLER://kafka:9093
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      BITNAMI_DEBUG: "true"
+    depends_on:
+      - postgres
+    volumes:
+      - kafka_data:/bitnami/kafka
 
   order-service:
     build:
@@ -85,5 +91,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/microservicedb
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: root
+
 volumes:
   postgres_data:
+  kafka_data:
+
