--- a/order_service/src/main/resources/application.properties
+++ b/order_service/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
+
+spring.kafka.producer.topic=new_orders
