--- a/notifications_service/src/main/resources/application.properties
+++ b/notifications_service/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
+
+spring.kafka.consumer.topic=sent_orders
+spring.kafka.consumer.group-id=notifications_group
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
