--- a/shipping_service/src/main/resources/application.properties
+++ b/shipping_service/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
+
+spring.kafka.consumer.topic=payed_orders
+spring.kafka.consumer.group-id=shopping_group
+spring.kafka.producer.topic=sent_orders
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
