Практическое задание - kafka

--- a/notifications_service/src/main/resources/application.properties
+++ b/notifications_service/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.kafka.consumer.topic=sent_orders
 spring.kafka.consumer.group-id=notifications_group
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.listener.ack-mode=MANUAL
