--- a/shipping_service/src/main/resources/application.properties
+++ b/shipping_service/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.kafka.consumer.group-id=shopping_group
 spring.kafka.producer.topic=sent_orders
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.listener.ack-mode=MANUAL
