Практическое задание - kafka

--- a/order_service/src/main/resources/application.properties
+++ b/order_service/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.show-sql=true
 spring.kafka.producer.topic=new_orders
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+logging.level.org.springframework.jdbc=TRACE
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
