--- a/payment_service/src/main/resources/application.properties
+++ b/payment_service/src/main/resources/application.properties
@@ -18,3 +18,13 @@ spring.kafka.producer.topic=payed_orders
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.listener.ack-mode=MANUAL
+
+logging.level.org.springframework.jdbc=TRACE
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+
+# ????????? ???????????
+spring.kafka.listener.concurrency=1
+spring.kafka.consumer.max-poll-records=1
+
+# ????????? batch-?????????
+spring.jpa.properties.hibernate.jdbc.batch_size=1
